2016-04-04  Bill Ming  <mbbill@gmail.com>

        [win] prepare-ChangeLog should treat windows path differently.
        https://bugs.webkit.org/show_bug.cgi?id=156120

        Reviewed by Brent Fulgham.

        * Scripts/prepare-ChangeLog:

2016-04-04  Alejandro G. Castro  <alex@igalia.com>

        REGRESSION(r198492): [GTK] The WEB_RTC flag was not correctly added in some situations
        https://bugs.webkit.org/show_bug.cgi?id=156164

        Reviewed by Philippe Normand.

        Enable the new WEB_RTC option by default for Gtk+.

        * Scripts/webkitperl/FeatureList.pm:

2016-04-03  Dan Bernstein  <mitz@apple.com>

        Use the correct value for the first nightly build with frameworks built for OS X 10.11.

        * Scripts/bisect-builds:
        (makeNightlyList):

2016-04-03  Dan Bernstein  <mitz@apple.com>

        Made bisect-builds work again.

        Rubber-stamped by Sam Weinig.

        * Scripts/bisect-builds:
        Changed to use HTTPS to access nightly.webkit.org, and added a minimum revision for OS X 10.11.

2016-04-01  Jiewen Tan  <jiewen_tan@apple.com>

        Build fix for r198956.

        Unreviewed.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2Cocoa/ProvisionalURLNotChange.mm: Renamed from Tools/TestWebKitAPI/Tests/WebKit2Cocoa/ProvisionalURLChange.mm.
        (-[ProvisionalURLNotChangeController webView:didFinishNavigation:]):
        (-[ProvisionalURLNotChangeController webView:didFailProvisionalNavigation:withError:]):
        (TEST):
        * TestWebKitAPI/Tests/WebKit2ObjC/CustomProtocolsInvalidScheme.mm:
        (-[LoadInvalidSchemeDelegate browsingContextController:didFailProvisionalLoadWithError:]):
        (TestWebKitAPI::TEST):

2016-04-01  Jiewen Tan  <jiewen_tan@apple.com>

        WebKit should dispatchDidFailProvisionalLoad while loading invalid URLs
        https://bugs.webkit.org/show_bug.cgi?id=155995
        <rdar://problem/14967004>
