@@ -47,12 +47,14 @@ static bool didFailProvisionalLoad;
 
 - (void)webView:(WebView *)sender didFailProvisionalLoadWithError:(NSError *)error forFrame:(WebFrame *)frame
 {
+    EXPECT_WK_STREQ(error.domain, @"WebKitErrorDomain");
+    EXPECT_EQ(error.code, WebKitErrorCannotShowURL);
+
     static char literal[] = "https://www.example.com<>/";
     NSURL *failedURL = WebCore::URLWithData([NSData dataWithBytes:literal length:strlen(literal)], nil);
-    if ([error.domain isEqual:@"WebKitErrorDomain"]
-        && error.code == WebKitErrorCannotShowURL
-        && [error.userInfo[@"NSErrorFailingURLKey"] isEqual:failedURL])
-        didFailProvisionalLoad = true;
+    EXPECT_TRUE([error.userInfo[@"NSErrorFailingURLKey"] isEqual:failedURL]);
+
+    didFailProvisionalLoad = true;
     didFinishTest = true;
 }
 
